--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,18 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.15.16",
+    "com.boundfoxstudios.fluentassertions": "https://github.com/BoundfoxStudios/fluentassertions-unity.git#upm",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=Assets/Plugins/UniRx/Scripts",
+    "com.unity.ai.navigation": "1.1.3",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.ide.rider": "3.0.13",
-    "com.unity.ide.visualstudio": "2.0.14",
+    "com.unity.ide.rider": "3.0.24",
+    "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.inputsystem": "1.5.1",
+    "com.unity.logging": "1.0.11",
+    "com.unity.test-framework": "2.0.1-pre.18",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.1",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.7.5",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
