--- a/Assets/Mochineko/VoiceActivityDetection.Samples/Mochineko.VoiceActivityDetection.Samples.asmdef
+++ b/Assets/Mochineko/VoiceActivityDetection.Samples/Mochineko.VoiceActivityDetection.Samples.asmdef
@@ -1,10 +1,12 @@
 {
-    "name": "Mochineko.VoiceActivityDetection",
+    "name": "Mochineko.VoiceActivityDetection.Samples",
     "rootNamespace": "",
     "references": [
+        "GUID:22f0c9c7def232d4a9b08741a84d73c2",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:9dc703687ff9843c78c2eab70b2e26ff"
+        "GUID:fd228c28e14f1a34cbe508676c914dd7",
+        "GUID:2665a8d13d1b3f18800f46e256720795",
+        "GUID:e0cd26848372d4e5c891c569017e11f1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
