Add falthy interval

--- a/Assets/Mochineko/VoiceActivityDetection/Mochineko.VoiceActivityDetection.asmdef
+++ b/Assets/Mochineko/VoiceActivityDetection/Mochineko.VoiceActivityDetection.asmdef
@@ -4,7 +4,10 @@
     "references": [
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:9dc703687ff9843c78c2eab70b2e26ff"
+        "GUID:9dc703687ff9843c78c2eab70b2e26ff",
+        "GUID:fd228c28e14f1a34cbe508676c914dd7",
+        "GUID:2665a8d13d1b3f18800f46e256720795",
+        "GUID:e0cd26848372d4e5c891c569017e11f1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
