Improve stream treatment

--- a/Assets/Mochineko/VoiceActivityDetection.Samples/Mochineko.VoiceActivityDetection.Samples.asmdef
+++ b/Assets/Mochineko/VoiceActivityDetection.Samples/Mochineko.VoiceActivityDetection.Samples.asmdef
@@ -10,7 +10,8 @@
         "GUID:e0cd26848372d4e5c891c569017e11f1",
         "GUID:12e7ae99596e14eef8970a67eb588899",
         "GUID:51d11816546934d4a937e4a420478ce5",
-        "GUID:2620e54ab6edb48f48d55966fd5662fb"
+        "GUID:2620e54ab6edb48f48d55966fd5662fb",
+        "GUID:9dc703687ff9843c78c2eab70b2e26ff"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
