--- a/Assets/Mochineko/VoiceActivityDetection/Mochineko.VoiceActivityDetection.asmdef
+++ b/Assets/Mochineko/VoiceActivityDetection/Mochineko.VoiceActivityDetection.asmdef
@@ -14,7 +14,7 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
